<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg4"
    tools:context=".Dashboard">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="28dp">
        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="4dp"
            android:contentDescription="@string/hamburger"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/hamburger"
            tools:ignore="MissingConstraints" />
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="3dp"
            android:layout_marginTop="50dp"
            android:contentDescription="@string/profile_pic"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/user1"
            tools:ignore="MissingConstraints" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:fontFamily="@font/museobold"
            android:text="@string/username"
            android:textColor="@color/secondary"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="72dp"
            tools:ignore="MissingConstraints" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_marginTop="180dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:cardCornerRadius="30dp">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/level_bg">
            <ProgressBar
                android:id="@+id/progressBar2"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="266dp"
                android:layout_height="24dp"
                android:indeterminateOnly="false"
                tools:layout_editor_absoluteX="63dp"
                tools:layout_editor_absoluteY="118dp"
                tools:ignore="MissingConstraints"
                android:visibility="visible"
                android:progressDrawable="@drawable/custom_progbar"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <FrameLayout
        android:id="@+id/frame1"
        android:layout_width="320dp"
        android:layout_height="100dp"
        android:background="@drawable/btn1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="380dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="27dp"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/museobold"
            android:textColor="@color/secondary"
            android:text="@string/practice_mode"
            android:textSize="28sp" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/frame2"
        android:layout_width="320dp"
        android:layout_height="100dp"
        android:background="@drawable/btn2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="490dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="27dp"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/museobold"
            android:textColor="@color/secondary"
            android:text="@string/lesson_mode"
            android:textSize="28sp" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/frame3"
        android:layout_width="320dp"
        android:layout_height="100dp"
        android:background="@drawable/btn5"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="600dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="27dp"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/museobold"
            android:textColor="@color/secondary"
            android:text="@string/music_sheets"
            android:textSize="28sp" />
    </FrameLayout>

</RelativeLayout>